[package]
name = "bearbearean-testing-crates-io"
description = "bearbearean testing things with crates.io"
repository = "https://github.com/bearbearean/bearbearean-testing-crates-io"
license = "MIT"
edition = "2024"
version = "0.1.2"

[lints]
rust.missing_docs = "warn"
clippy.missing_docs_in_private_items = "warn"

[dependencies]
